Revert "5.0 - Replaced obsolete file with new version. Renamed page title."
This reverts commit e056ca0d720e138ab09ee75977ee1e98945f82d6.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -29,6 +29,9 @@ For details on supported product versions, see https://www.suse.com/lifecycle.
 The operating system running on a client is supported by the organization that supplies the operating system.
 ====
 
+// 2023-09-20 OM: Make sure this table and the one in file
+// modules/installation-and-upgrade/pages/client-requirements.adoc are identical
+
 [[supported-client-systems-snippet]]
 
 ifeval::[{suma-content} == true]
@@ -136,6 +139,11 @@ ifeval::[{suma-content} == true]
 endif::[]
 
 
+
+
+
+// 2023-09-20 OM: Make sure this table and the one in file
+// modules/installation-and-upgrade/pages/client-requirements.adoc are identical
 
 ifeval::[{uyuni-content} == true]
 [[uyuni.supported.clients]]
