--- a/modules/common-workflows/pages/workflow-client-onboarding.adoc
+++ b/modules/common-workflows/pages/workflow-client-onboarding.adoc
@@ -12,7 +12,7 @@ This workflow shows you how to set up your {productname} Server to manage a new 
 This workflow shows you how to onboard a client to your {productname} Server.
 
 The client must be running a supported Linux operating system.
-For a list of supported client systems, see xref:client-configuration:supported-features.adoc[].
+For a list of supported client systems, see xref:installation-and-upgrade:client-requirements.adoc[].
 
 This is one of the first tasks you need to do when you set up {productname} for the first time, and you will probably have to do it many more times as you use the product.
 
