Adjust the docs for helm and some cleanup

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc
@@ -19,25 +19,24 @@ curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--tls-san=<K3S_HOST_FQDN>" sh -
 
 The installation requires the [literal]``mgrpxy`` and [literal]``helm`` packages.
 
-ifeval::[{suma-content} == true]
-The [literal]``mgrpxy`` package is available in the {productname} Proxy product repositories.
+For Helm, you can install it using the installer script
+----
+curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+$ chmod 700 get_helm.sh
+$ ./get_helm.sh
+----
 
-[NOTE]
-====
-The Containers Module is required to install [literal]``helm``.
-====
+For more information see link:https://helm.sh/docs/intro/install/#from-script
 
-endif::[]
-
-ifeval::[{uyuni-content} == true]
 The [literal]``mgrpxy`` package is available in the container utils repository: pick the one matching the distribution in: https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable:/ContainerUtils/.
-endif::[]
 
-To install them run:
+. To install them on Leap Micro run:
++
+----
+transactional-update pkg install mgrpxy
+----
 
-----
-zypper in helm mgrpxy
-----
+. Reboot
 
 [[installation-proxy-containers-k3s-deploy]]
 == Deploying the {productname} proxy helm chart
