--- a/modules/installation-and-upgrade/pages/container-deployment/generate_proxy_config.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/generate_proxy_config.adoc
@@ -16,6 +16,7 @@ For Podman deployment, the container host for the {productname} Proxy must be re
 If a proxy FQDN is used to generate a proxy container configuration that is not a registered client (as in the Kubernetes use case), a new system entry will appear in system list.
 This new entry will be shown under previously entered Proxy FQDN value and will be of [literal]``Foreign`` system type.
 
+// tag::generate-proxy-config-section[]
 === Generate the Proxy Configuration with {webui}
 
 
@@ -93,4 +94,4 @@ mgrctl exec -ti 'spacecmd proxy_container_config -- -p 8022 pxy.example.com srv.
 ----
 mgrctl cp server:/tmp/config.tar.gz .
 ----
-
+// end::generate-proxy-config-section[]
