--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-k3s-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-k3s-deployment-suma.adoc
@@ -25,21 +25,18 @@ curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--tls-san=<K3S_HOST_FQDN>" sh -
 
 The installation requires the [literal]``mgrpxy`` and [literal]``helm`` packages.
 
-ifeval::[{suma-content} == true]
+For Helm, you can install it using the installer script
+----
+curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+$ chmod 700 get_helm.sh
+$ ./get_helm.sh
+----
+
+For more information see link:https://helm.sh/docs/intro/install/#from-script
+
 The [literal]``mgrpxy`` package is available in the {productname} Proxy product repositories.
 
-[NOTE]
-====
-The Containers Module is required to install [literal]``helm``.
-====
-
-endif::[]
-
-ifeval::[{uyuni-content} == true]
-The [literal]``mgrpxy`` package is available in the container utils repository: pick the one matching the distribution in: https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable:/ContainerUtils/.
-endif::[]
-
-. To install them run:
+. To install it run:
 +
 ----
 transactional-update pkg install mgrpxy
@@ -47,7 +44,7 @@ transactional-update pkg install mgrpxy
 
 . Reboot
 
-include::../generate_proxy_config.adoc[]
+include::../generate_proxy_config.adoc[tags=generate-proxy-config-section]
 
 [[installation-proxy-containers-k3s-deploy]]
 == Deploying the {productname} proxy helm chart
