--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -121,12 +121,14 @@ For more information about preparing your machines (virtual or physical), see li
 .Registering {productname} as an Extension during Installation
 [NOTE]
 ====
-The {productname} {productnumber} container is installed as an extension. Therefore, in addition to acquiring {scc} registration codes for {sle-micro} {microversion}, you will also need {scc} registration codes for the following extensions:
+The {productname} {productnumber} containers are installed as extensions. Depending on the specific extension needed from the list below, additional {scc} registration codes will be required for each.
 
 * {productname} {productnumber} Server
 * {productname} {productnumber} Proxy
 * Retail Branch Server
 
+
+*NOTE:* The {sle-micro} {microversion} entitlement is included within the SUSE Manager entitlement, so it does not require a separate registration code.
 ====
 
 . Enter your {scc} email address.
