--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -123,7 +123,9 @@ image::root-password.png[]
 .Procedure: Registering {sle-micro} and {productname} {productnumber}
 . Boot the virtual machine.
 . Log in as `root`.
-. Register {sle-micro} with SCC.
++
+// note for 5.0 backport: 5.0 should have sle-micro
+. Register {sl-micro} with SCC.
 +
 
 ----
