--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -117,10 +117,12 @@ image::root-password.png[]
 
 
 
-== Register {sle-micro} and {productname} {productnumber} Server
+== Register {sl-micro} and {productname} {productnumber} Server
+
+// note for 5.0 backport: 5.0 should have sle-micro
 
 
-.Procedure: Registering {sle-micro} and {productname} {productnumber}
+.Procedure: Registering {sl-micro} and {productname} {productnumber}
 . Boot the virtual machine.
 . Log in as `root`.
 +
