--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -4,7 +4,7 @@ ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
 
-This chapter provides the required Virtual Machine settings for deployment of {productname} {productnumber} as an Image.
+This chapter provides the required Virtual Machine settings for deployment of {productname} {productnumber} as an image.
 KVM will be combined with Virtual Machine Manager (_virt-manager_) as a sandbox for this installation.
 
 
@@ -49,6 +49,7 @@ For additional information on the self install images, see:
 
 __* Two storage options are available for s390x: CDL DASD and FBA.__
 
+
 [[quickstart.sect.kvm.settings]]
 == Virtual Machine Manager (virt-manager) Settings
 
@@ -58,7 +59,7 @@ Enter the following settings when creating a new virtual machine using *virt-man
 ====
 This table specifies the minimum requirements.
 These are suitable for a quick test installation, such as a server with one client.
-If you want to use a production environment and especially need background information about disk space, see xref:installation-and-upgrade:hardware-requirements.adoc[].
+If you want to use a production environment and need background information about disk space, see xref:installation-and-upgrade:hardware-requirements.adoc[].
 ====
 
 
@@ -118,10 +119,14 @@ image::root-password.png[]
 
 == Register {sl-micro} and {productname} {productnumber} Server
 
+// note for 5.0 backport: 5.0 should have sle-micro
+
 
 .Procedure: Registering {sl-micro} and {productname} {productnumber}
 . Boot the virtual machine.
 . Log in as `root`.
++
+// note for 5.0 backport: 5.0 should have sle-micro
 . Register {sl-micro} with SCC.
 +
 
@@ -138,7 +143,8 @@ transactional-update register -r <REGCODE> -e <your_email>
 transactional-update register -p SUSE-Manager-Server/5.0/x86_64 -r <REGCODE>
 ----
 
-. Reboot
+. Reboot.
+
 . Update the system:
 +
 
@@ -168,7 +174,7 @@ mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
 +
 [NOTE]
 ====
-This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
+This command will move the persistent storage volumes at [path]``/var/lib/containers/storage/volumes`` to specified storage devices.
 
 For more information, see
 
