--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-k3s-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-k3s-deployment-suma.adoc
@@ -32,7 +32,7 @@ chmod 700 get_helm.sh
 ./get_helm.sh
 ----
 
-For more information see link:https://helm.sh/docs/intro/install/#from-script
+For more information, see https://helm.sh/docs/intro/install/#from-script.
 
 The [literal]``mgrpxy`` package is available in the {productname} Proxy product repositories.
 
