--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc
@@ -19,11 +19,11 @@ curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--tls-san=<K3S_HOST_FQDN>" sh -
 
 The installation requires the [literal]``mgrpxy`` and [literal]``helm`` packages.
 
-For Helm, you can install it using the installer script
+For Helm, you can install it using the installer script:
 ----
 curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
-$ chmod 700 get_helm.sh
-$ ./get_helm.sh
+chmod 700 get_helm.sh
+./get_helm.sh
 ----
 
 For more information see link:https://helm.sh/docs/intro/install/#from-script
