--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc
@@ -26,7 +26,7 @@ chmod 700 get_helm.sh
 ./get_helm.sh
 ----
 
-For more information see link:https://helm.sh/docs/intro/install/#from-script
+For more information, see https://helm.sh/docs/intro/install/#from-script.
 
 The [literal]``mgrpxy`` package is available in the container utils repository: pick the one matching the distribution in: https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable:/ContainerUtils/.
 
