--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -1,7 +1,7 @@
 [[lsd-hub-install]]
 = Hub Deployment with XMLRPC
 
-
+Two ways...
 
 == With Third Party Certificates
 
@@ -14,6 +14,9 @@ Prepare 3rd party certificates for both Hub and Peripheral servers first and the
 
 // Peripheral servers:
 // mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.crt --ssl-server-key server.key
+
+
+=== Hub
 
 .Procedure: Hub server
 
@@ -33,12 +36,11 @@ mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert hub.crt
 For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-mgradm[].
 
 
-Then prepare SSL certificates for the peripheral servers.
+
 For more information about SSL certificates, see xref:specialized-guides:large-deployments/hub-reqs.adoc#lsd-hub-reqs-certs[].
 
-Peripheral servers:
-mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.crt --ssl-server-key server.key
 
+=== Peripheral Servers
 
 .Procedure: Using Third Party Certificates
 . Preliminary Requirement: Hub server installation
