--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -1,13 +1,18 @@
 [[lsd-hub-install]]
 = Hub Deployment with XMLRPC
 
-Two ways...
+You can deploy a hub environment either with third party certificates or with self-generated certificates.
+
+For more information about SSL certificates, see xref:specialized-guides:large-deployments/hub-reqs.adoc#lsd-hub-reqs-certs[].
+
+
 
 == With Third Party Certificates
 
-// For a hub environment, first ... then ...
-
-Prepare 3rd party certificates for both Hub and Peripheral servers first and then deploy them, to ensure that the hub is using the same CA.
+// FIXME: what does this actually mean?
+//        Just checking that you have those available and use them
+//        while deploying the hub infrastructure?
+Prepare third party certificates for both the Hub Server and the Peripheral servers first.
 
 // Hub:
 // mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert hub.crt --ssl-server-key hub.key --hubxmlrpc-replicas 1
@@ -16,9 +21,9 @@ Prepare 3rd party certificates for both Hub and Peripheral servers first and the
 // mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.crt --ssl-server-key server.key
 
 
-=== Hub
+=== Hub Server Installation
 
-.Procedure: Hub server
+.Procedure: Installing the Hub Server
 
 . Install a container host with {sl-micro}.
 For more information, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
@@ -31,23 +36,19 @@ For more information, see xref:installation-and-upgrade:container-deployment/sum
 ----
 mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert hub.crt --ssl-server-key hub.key --hubxmlrpc-replicas 1
 ----
-+
 
 For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-mgradm[].
 
 
 
-For more information about SSL certificates, see xref:specialized-guides:large-deployments/hub-reqs.adoc#lsd-hub-reqs-certs[].
-
-
 === Peripheral Servers
 
-.Procedure: Using Third Party Certificates
+.Procedure: Installing peripheral servers using third party certificates
 . Preliminary Requirement: Hub server installation
 . Preliminary Requirement: A certificate for every peripheral server (for example, [literal]``server.crt``) and a key (for example, [literal]``server.key``).
 . Preliminary Requirement: CA Certificate.
-. On every peripheral server, copy the same CA to [path]``/etc/pki/trust/anchors/`` and run ``update-ca-certificates``.
-. You can now install {productname} using the following command (replace appropriately the names of the certificates):
+* On every peripheral server host, copy the same CA to [path]``/etc/pki/trust/anchors/`` and run ``update-ca-certificates``.
+* On every peripheral server host, install {productname} using the following command (replace appropriately the names of the certificates):
 +
 
 ----
@@ -60,10 +61,10 @@ mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.
 
 == With Self-Generated Certificates
 
-For a hub environment, first ... then ...
+// For a hub environment, first ... then ...
 
 
-.Procedure: Hub server
+.Procedure: Installing th hub server
 
 . Install a container host with {sl-micro}.
 For more information, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
@@ -111,7 +112,7 @@ rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 . For every peripheral server:
 * From the hub server container, copy [path]``/root/ssl-build/RHN-ORG-TRUSTED-SSL-CERT``,  [path]``/root/ssl-build/<hostname>/server.crt`` and [path]``/root/ssl-build/<hostname>/server.key`` to the peripheral server host.
 * On every peripheral server host, copy [path]``RHN-ORG-TRUSTED-SSL-CERT`` to [path]``/etc/pki/trust/anchors/``, and run [command]``update-ca-certificates``.
-* Next, on every peripheral server host, deploy {productname} with:
+* On every peripheral server host, deploy {productname} with:
 +
 
 ----
