cont. with parallelize deploy scenarios

--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -21,12 +21,13 @@ Prepare third party certificates for both the Hub Server and the Peripheral serv
 // mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.crt --ssl-server-key server.key
 
 
+[[lsd-hub-install-3rd-hub]]
 === Hub Server Installation
 
 .Procedure: Installing the Hub Server
 
 . Install a container host with {sl-micro}.
-For more information, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
+  For more information about {sl-micro} as a container host, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
 
 . On the container host, deploy {productname} as the hub server using the third party certificate.
   Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
@@ -41,6 +42,7 @@ For more information about deploying with [command]``mgradm``, see xref:installa
 
 
 
+[[lsd-hub-install-3rd-peripheral]]
 === Peripheral Servers
 
 .Procedure: Installing peripheral servers using third party certificates
@@ -64,10 +66,14 @@ mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.
 // For a hub environment, first ... then ...
 
 
+
+[[lsd-hub-install-self-hub]]
+=== Hub Server Installation
+
 .Procedure: Installing th hub server
 
 . Install a container host with {sl-micro}.
-For more information, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
+  For more information about {sl-micro} as a container host, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
 
 . On the container host, deploy {productname} as the hub server.
   Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
@@ -88,6 +94,9 @@ Next step, peripheral server
 ////
 
 
+
+[[lsd-hub-install-self-peripheral]]
+=== Peripheral Servers
 
 .Procedure: Peripheral Servers with Self-Generated Certificates
 
@@ -123,6 +132,7 @@ mgradm install podman --ssl-ca-root RHN-ORG-TRUSTED-SSL-CERT --ssl-server-cert s
 +
 
 // CHECKIT: did we specify the credential during the hub server deployment?
++
 ----
 mgradm hub register --api-password <hub password> --api-server <hub fqdn> --api-user <hub admin>
 ----
