xrefs for clarity

--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -46,9 +46,10 @@ For more information about deploying with [command]``mgradm``, see xref:installa
 === Peripheral Servers
 
 .Procedure: Installing peripheral servers using third party certificates
-. Preliminary Requirement: Hub server installation
 . Preliminary Requirement: A certificate for every peripheral server (for example, [literal]``server.crt``) and a key (for example, [literal]``server.key``).
 . Preliminary Requirement: CA Certificate.
+. Preliminary Requirement: Hub server installation.
+  For more information, see xref:specialized-guides:large-deployments/hub-install.adoc#lsd-hub-install-3rd-hub[].
 * On every peripheral server host, copy the same CA to [path]``/etc/pki/trust/anchors/`` and run ``update-ca-certificates``.
 * On every peripheral server host, install {productname} using the following command (replace appropriately the names of the certificates):
 +
@@ -70,7 +71,7 @@ mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.
 [[lsd-hub-install-self-hub]]
 === Hub Server Installation
 
-.Procedure: Installing th hub server
+.Procedure: Installing the hub server
 
 . Install a container host with {sl-micro}.
   For more information about {sl-micro} as a container host, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
@@ -100,6 +101,8 @@ Next step, peripheral server
 
 .Procedure: Peripheral Servers with Self-Generated Certificates
 
+. Preliminary Requirement: Hub server installation.
+  For more information, see xref:specialized-guides:large-deployments/hub-install.adoc#lsd-hub-install-self-hub[].
 . On the container host of the hub server, enter the server container with:
 +
 
