--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -202,3 +202,8 @@ ol67-gpg-pubkey-72F97B74EC551F0A3.key
 //====
 
 include::snippets/create_bootstrap_repo_register.adoc[]
+
+[WARNING]
+====
+When generating the bootstrap repository for Liberty 7 LTSS for {oracle} Linux, ensure that channel [literal]``RES-7-BASE-Updates for x86_64 LBTOL7`` (label: [literal]``res-7-base-updates-x86_64-lbtol7``) is mirrored.
+====
