--- a/modules/administration/pages/troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc
@@ -10,13 +10,21 @@ For more information about bootstrap repositories, see xref:client-configuration
 
 .Procedure: Creating Bootstrap Repositories for End-Of-Life Products
 
-. At the command prompt on the {productname} Server, as root, list the available unsupported bootstrap repositories with the [option]``--force`` option, for example:
+. At the command prompt of the {productname} container host, as root, enter the server container with:
++
+
+----
+mgradm term
+----
+
+. Inside the container, list the available unsupported bootstrap repositories with the [option]``--force`` option, for example:
 +
 ----
 mgr-create-bootstrap-repo --list --force
 1. SLE-12-SP2-x86_64
 2. SLE-12-SP3-x86_64
 ----
+
 . Create the bootstrap repository, using the appropriate repository name as the product label:
 +
 ----
