--- a/modules/administration/pages/troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc
@@ -14,7 +14,7 @@ For more information about bootstrap repositories, see xref:client-configuration
 +
 
 ----
-mgradm term
+mgrctl term
 ----
 
 . Inside the container, list the available unsupported bootstrap repositories with the [option]``--force`` option, for example:
