--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -14,7 +14,7 @@ For information on registering with {scc}, retrieving your organization credenti
 [WARNING]
 ====
 This method is no longer supported.
-The supported way is going forward is VM based install - **link needed here**.
+The supported way is going forward is VM based install.
 ====
 
 [NOTE]
