Warning for retail UI added.

--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -11,6 +11,12 @@ We assume that you have already registered your {susemgr} product with {scc} and
 For information on registering with {scc}, retrieving your organization credentials from {scc}, or obtaining installation media, see xref:installation-and-upgrade:general-requirements.adoc[].
 ////
 
+[WARNING]
+====
+This method is no longer supported.
+The supported way is going forward is VM based install.
+====
+
 [NOTE]
 ====
 Before installing {susemgr}, ensure your physical or virtual machine has enough disk space and RAM by checking the requirements at xref:retail:retail-requirements.adoc[Hardware].
