--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -182,7 +182,7 @@ Because {suse} does not install RPM packages in the container, the administrator
 +
 
 ----
-mgradm cp /local/ca.file server:/etc/pki/trust/anchors/
+mgrctl cp /local/ca.file server:/etc/pki/trust/anchors/
 ----
 //====
 
