--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -45,6 +45,7 @@ For more information about deploying with [command]``mgradm``, see xref:installa
 [[lsd-hub-install-3rd-peripheral]]
 === Peripheral Servers
 
+// FIXME: make use of 'mgrctl cp'
 .Procedure: Installing peripheral servers using third party certificates
 . Preliminary Requirement: A certificate for every peripheral server (for example, [literal]``server.crt``) and a key (for example, [literal]``server.key``).
 . Preliminary Requirement: CA Certificate.
@@ -99,6 +100,7 @@ Next step, peripheral server
 [[lsd-hub-install-self-peripheral]]
 === Peripheral Servers
 
+// FIXME: make use of 'mgrctl cp'
 .Procedure: Peripheral Servers with Self-Generated Certificates
 
 . Preliminary Requirement: Hub server installation.
