use 'mgrctl term' to enter the container, etc.
per feedback

--- a/modules/administration/pages/troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc
@@ -17,20 +17,25 @@ For more information about bootstrap repositories, see xref:client-configuration
 mgrctl term
 ----
 
-. Inside the container, list the available unsupported bootstrap repositories with the [option]``--force`` option, for example:
+. Inside the container, execute the following steps:
 +
+
+--
+.. List the available unsupported bootstrap repositories with the [option]``--force`` option, for example:
++
+
 ----
 mgr-create-bootstrap-repo --list --force
 1. SLE-12-SP2-x86_64
 2. SLE-12-SP3-x86_64
 ----
 
-. Create the bootstrap repository, using the appropriate repository name as the product label:
+.. Create the bootstrap repository, using the appropriate repository name as the product label:
 +
+
 ----
 mgr-create-bootstrap-repo --create SLE-12-SP2-x86_64 --force
 ----
+--
 
 If you do not want to create bootstrap repositories manually, you can check whether LTSS is available for the product and bootstrap repository you need.
-
-
