Apply suggestions from code review
Co-authored-by: Marek Czernek <marek.czernek@suse.com>

--- a/modules/administration/pages/troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc
@@ -10,7 +10,7 @@ For more information about bootstrap repositories, see xref:client-configuration
 
 .Procedure: Creating Bootstrap Repositories for End-Of-Life Products
 
-. At the command prompt of the {productname} container host, as root, enter the server container with:
+. At the command prompt of the {productname} container host, as root, enter the server container:
 +
 
 ----
@@ -30,7 +30,7 @@ mgr-create-bootstrap-repo --list --force
 2. SLE-12-SP3-x86_64
 ----
 
-.. Create the bootstrap repository, using the appropriate repository name as the product label:
+.. Create the bootstrap repository by using the appropriate repository name as the product label:
 +
 
 ----
