Emphasized existing instruction by turning it into admonition.

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -194,7 +194,11 @@ As a result of this behavior:
 
 We recommend that the repositories and the database for {productname} are stored on separate storage devices.
 This will help to avoid data loss.
+
+[IMPORTANT]
+====
 You must set up the storage devices before you run the YaST {productname} setup procedure.
+====
 
 {productname} requires three different volumes:
 
