--- a/modules/installation-and-upgrade/pages/pubcloud-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/pubcloud-requirements.adoc
@@ -54,7 +54,10 @@ We recommend that the repositories and the database for {productname} are stored
 This will help to avoid data loss.
 Do not use logical volume management (LVM) for public cloud installations.
 
+[IMPORTANT]
+====
 You must set up the storage devices before you run the YaST {productname} setup procedure.
+====
 
 The size of the disk for repositories storage is dependent on the number of distributions and channels you intend to manage with {productname}.
 When you attach the virtual disks, they will appear in your instance as Unix device nodes.
