--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -96,6 +96,7 @@ For a list of all persistent volumes in the container, see xref:installation-and
 
 
 
+[[deploy-suma-server-micro]]
 == {sle-micro} {microversion} Installation
 
 .Procedure: Download the Installation Media
@@ -235,6 +236,7 @@ For more information, see
 
 
 
+[[deploy-suma-server-mgradm]]
 == Deploy with mgradm
 
 .Procedure: Deploy {productname} {productnumber} Using mgradm
