--- a/modules/specialized-guides/pages/large-deployments/hub-reqs.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reqs.adoc
@@ -11,34 +11,122 @@ To set up a Hub installation, you require:
 
 
 
+[[lsd-hub-reqs-server]]
 == Hub Server
 
-Deploy the central {productname} Server, which acts as the Hub Server, with [command]``mgradm``.
-For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
+Deploy the central {productname} Server, which acts as the Hub Server, with the [command]``mgradm`` command.
+Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
+For example:
+
+----
+mgradm install podman suma.example.com --hubxmlrpc-replicas 1
+----
+
+For more information about hub server deployment, see xref:specialized-guides:large-deployments/hub-install.adoc[].
+
 
 [NOTE]
 ====
 The Hub Server must not have clients registered to it.
-Clients should only be registered to the peripheral servers.
+Clients should only be registered to the Peripheral Servers.
 ====
+
+
+
+[[lsd-hub-reqs-certs]]
+=== SSL Certificates
+
+The Hub Server's and the Peripheral Servers' SSL certificates must be signed by the same CA.
+There are two ways to fulfill this requirement:
+
+* Use third party certificates.
+* Deploy the Hub Server first and use it to generate the certificates for the Peripheral Servers.
+  For more information, see xref:specialized-guides:large-deployments/hub-reqs.adoc#lsd-hub-reqs-gencerts[].
+
+
+
+
+[[lsd-hub-reqs-gencerts]]
+=== Generate the Certificates for Peripheral Servers
+
+
+
+[NOTE]
+====
+If you will use third party provided Certificates, you can skip this procedure.
+====
+
+.Procedure: Generating the Certificates for Peripheral Servers
+
+. From the container host, enter the shell in the Hub Server container with:
++
+----
+mgrctl term
+----
+
+. On the command line, run [command]``rhn-ssl-tool`` for each Peripheral Server (replace placeholders such as [literal]``COUNTRY``, [literal]``STATE``, [literal]``example.com``, etc. with values from your environment):
++
+
+----
+rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
+  --set-state="STATE" --set-city="CITY" --set-org="ORGANIZATION" \
+  --set-org-unit="ORGANIZATION UNIT" --set-email="name@example.com" \
+  --set-hostname="HOSTNAME" --set-cname="example.com"
+----
+
+. Copy these files to the Peripheral Server host:
++
+* [path]``/root/ssl-build/RHN-ORG-TRUSTED-SSL-CERT``
+* [path]``/root/ssl-build/HOSTNAME/server.crt``
+* [path]``/root/ssl-build/HOSTNAME/server.key``
+
 
 
 
 == Peripheral Servers
 
+
+
 Deploy the peripheral servers with [command]``mgradm``.
 For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
 
-Peripheral servers must be registered to the Hub Server as foreign clients.
+
+.Procedure:Deploying and Registering Peripheral Servers
+
+. Prepare Peripheral Server hosts.
+
+. On each Peripheral Server host:
+
+* Copy [path]``RHN-ORG-TRUSTED-SSL-CERT`` to [path]``/etc/pki/trust/anchors/`` and run [command]``update-ca-certificates``.
+* Deploy the Peripheral Server with:
++
+----
+mgradm install podman --ssl-ca-root RHN-ORG-TRUSTED-SSL-CERT \
+  --ssl-server-cert server.crt --ssl-server-key server.key
+----
+
+. On each Peripheral Server host register Peripheral Server to the Hub Server:
++
+
+----
+mgradm hub register --api-server <HUB_FQDN> --api-user <HUB_ADMIN> \
+  --api-password <HUB_ADMIN_PASSWORD>
+----
++
+
+Peripheral Servers must be registered to the Hub Server as foreign clients.
 Standard registration methods cannot be used.
-Use [command]``mgradm`` on the peripheral server host:
 
-----
-mgradm hub register --api-server <HUB_FQDN> --api-user <HUB_ADMIN> --api-password <HUB_ADMIN_PASSWORD>
-----
 
-The peripheral servers must be registered to the Hub Server directly, do not use a proxy.
+[NOTE]
+====
+Peripheral Servers must be registered to the Hub Server directly, do not use a proxy.
+====
 
 Optionally, it is possible to register the podman container host as a standard client ({salt} minion) and manage it from {productname} Server.
 
-You need credentials to access the XMLRPC APIs on each server, including the Hub Server.
+// You need credentials to access the XMLRPC APIs on each server, including the Hub Server.
+
+
+
+Now the XMLRPC API is available and reportdb synchronization will take place.
