added info about upgrading server or proxy to Uyuni documentation

--- a/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
@@ -32,7 +32,11 @@ To upgrade to a specific version, provide the tag parameter with the desired ima
 
 [IMPORTANT]
 ====
+
+ifeval::[{suma-content} == true]
 While there is an option to upgrade a specific container using its specific tag, this feature is intended for applying PTFs only.
+endif::[]
+
 We highly recommend using the same tag for all proxy containers to ensure consistency under normal circumstances.
 ====
 
