--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -53,8 +53,10 @@ ifeval::[{uyuni-content} == true]
 ** Upgrade and Migration
 *** Server
 **** xref:container-deployment/uyuni/migrate-uyuni-to-a-container.adoc[Migrate from Legacy to Container]
+**** xref:container-management/updating-server-containers.adoc[Server Upgrade]
 *** Proxy
 **** xref:container-deployment/uyuni/proxy-migration-uyuni.adoc[Proxy Migration]
+**** xref:container-management/updating-proxy-containers.adoc[Proxy Upgrade]
 *** Clients
 **** xref:client-intro.adoc[Upgrading Clients]
 endif::[]
