--- a/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
@@ -22,10 +22,12 @@ This command will bring the status of the container up-to-date and restart the s
 .Upgrading to specific version
 [NOTE]
 ====
-If you do not specify the tag parameter , it will default to upgrading to the most recent version. To upgrade to a specific version, provide the tag parameter with the desired image tag.
+If you do not specify the tag parameter , it will default to upgrading to the most recent version.
+To upgrade to a specific version, provide the tag parameter with the desired image tag.
 ====
 
 For more information on the upgrade command and its parameters, use the following command:
+
 ----
 mgradm upgrade podman -h
 ----
