feature available for then 1 version

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-migration-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-migration-uyuni.adoc
@@ -3,11 +3,10 @@ ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
 
-In {productname} {productnumber}, the containerized proxy is managed by a set of systemd services.
+The containerized proxy now is managed by a set of systemd services.
+For managing the containerized proxy, use the [command]``mgrpxy`` tool.
 
-In {productname} {productnumber}, management of the containerized proxy was re-designed and made simpler with the [command]``mgrpxy`` tool.
-
-This section will help you migrate from the legacy [systemitem]``systemd`` proxy using the new [command]``mgrpxy`` tool.
+This section will help you migrate from the legacy [systemitem]``systemd`` proxy using the [command]``mgrpxy`` tool.
 
 [IMPORTANT]
 ====
