Make nav uyuni migration text uniform (server and proxy)

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -55,7 +55,7 @@ ifeval::[{uyuni-content} == true]
 **** xref:container-deployment/uyuni/migrate-uyuni-to-a-container.adoc[Migrate from Legacy to Container]
 **** xref:container-management/updating-server-containers.adoc[Server Upgrade]
 *** Proxy
-**** xref:container-deployment/uyuni/proxy-migration-uyuni.adoc[Proxy Migration]
+**** xref:container-deployment/uyuni/proxy-migration-uyuni.adoc[Migrate from Legacy to Container]
 **** xref:container-management/updating-proxy-containers.adoc[Proxy Upgrade]
 *** Clients
 **** xref:client-intro.adoc[Upgrading Clients]
