--- a/modules/client-configuration/pages/registration-overview-suse.adoc
+++ b/modules/client-configuration/pages/registration-overview-suse.adoc
@@ -19,6 +19,9 @@ You must also have created an activation key.
 For more information about creating activation keys, see xref:client-configuration:activation-keys.adoc[].
 
 
+If the client was registered to SCC, SMT, or RMT previously, remove such a registration with [command]``SUSEConnect`` before migrating the client to {productname} Server.
+If you forget about removing the old registration first, it can happen that repositories not needed anymore getting automatically added to the client even after the client has been migrated to a newer version of a {suse} operating system using {productname}.
+
 [IMPORTANT]
 ====
 Do not register a {productname} Server to itself.
