--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -3,6 +3,17 @@
 
 This section details the networking and port requirements for {productname}.
 
+[IMPORTANT]
+====
+IP forwarding will be enabled by containerized installation.
+This behavior is done by podman directly.
+podman containers do not run if IP forwarding is disabled.
+It is recommend to take measures for network isolation of the {productname} environment according to your policies.
+
+For more information, see https://www.suse.com/support/kb/doc/?id=000020166.
+====
+
+
 == Fully Qualified Domain Name (FQDN)
 The {productname} server must resolve its FQDN correctly.
 If the FQDN cannot be resolved, it can cause serious problems in a number of different components.
